[package]
name = "river-swww"
authors = ["Lina <61861965+l1na-forever@users.noreply.github.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/l1na-forever/river-swww"
description = "Sets swww's wallpaper based on river's focused tags."
keywords = ["river", "wayland", "wallpaper", "swww", "wallpaper-changer"]
exclude = ["*.gif"]

[dependencies]
async-channel = "2.3"
async-process = "2.3"
crossbeam-channel = "0.5"
dirs-next = "2.0"
futures-lite = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "2.0"
smol-macros = "0.1"
